--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VR Apps</title>
     <style>
-        .app-container {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-        .app-title {
-            font-weight: bold;
-            margin-right: 10px;
-        }
-        .app-description {
-            flex-grow: 1;
-            margin-left: 10px;
-        }
+   .app-container {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    .app-title {
+        font-weight: bold;
+        margin-right: 10px;
+    }
+    .app-description {
+        flex-grow: 1;
+        margin-left: 10px;
+        max-width: 40%;
+    }
     </style>
 </head>
 <body>
@@ -128,7 +129,7 @@
 
 
 
-<p>STEAMVRDemo
+<!--<p>STEAMVRDemo
 START HERE:
 Welcome to VR
 https://arborxr.com/content-creator/futurus/
@@ -215,4 +216,4 @@ Existing CPR courses let you train your technique, but no amount of classroom tr
 \With virtual reality we can close the gap between classroom training and the real world unlike any other tool, giving people the confidence to act when there is a life on the line.
 https://storage.xrdm.app/90064c79-a30e-413a-a398-ec9a14c47719/responsive-images/xEb3S9YhhUNJ8k1YwPrWKhdqhQGmtdvDxTW2TEil___media_library_original_192_192.png?X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=GOOGFDQ3UIPI4UQT2U4W6556%2F20240229%2FUS%2Fs3%2Faws4_request&X-Amz-Date=20240229T190034Z&X-Amz-SignedHeaders=host&X-Amz-Expires=172800&X-Amz-Signature=79558eca62aa1741c2b44e26caa9bf302d746356163f86618923c341b7904dee
 
-</p>
+</p>-->
