--- a/index.html
+++ b/index.html
@@ -11,16 +11,31 @@
         display: flex;
         align-items: center;
         margin-bottom: 20px;
+        overflow: hidden; /* Clear the float */
     }
     .app-title {
         font-weight: bold;
         margin-right: 10px;
     }
+ 
+
+ 
+    .app-container img {
+        float: left; /* Float the image to the left */
+        margin-right: 10px; /* Add some space between the image and the text */
+    }
+
     .app-description {
+        overflow: hidden; /* Clear the float */
         flex-grow: 1;
-        margin-left: 10px;
+         margin-left: 10px;
         max-width: 40%;
     }
+
+
+
+
+        
     </style>
 </head>
 <body>
